--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="jokes">Chuck Jokes</a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link" routerLink="jokes">Jokes</a>
+        <a class="nav-link" routerLink="jokes" routerLinkActive="active"
+          >Jokes</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="favorites">Favorites</a>
+        <a class="nav-link" routerLink="favorites" routerLinkActive="active"
+          >Favorites</a
+        >
       </li>
     </ul>
   </div>
