--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -1,5 +1,27 @@
-<h1>Chuck Jokes</h1>
+<div class="conatiner mt-2 text-center">
+  <div class="row">
+    <div class="col">
+      <h1>Chuck Jokes</h1>
 
-<app-joke-card-list
-  [jokes]="(jokes$ | async) || []"
-  (favorite)="onFavorite($event)"></app-joke-card-list>
+      <ng-container *ngIf="jokes$ | async as jokes">
+        <app-joke-card-list
+          [jokes]="(jokes$ | async) || []"
+          (favorite)="onFavorite($event)"></app-joke-card-list>
+
+        <button
+          *ngIf="jokes.length === 0"
+          class="btn btn-primary"
+          (click)="loadJokes()">
+          Load Jokes
+        </button>
+      </ng-container>
+
+      <div
+        *ngIf="isLoading$ | async"
+        class="spinner-border text-primary"
+        role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  </div>
+</div>
