--- a/src/app/jokes/jokes.component.html
+++ b/src/app/jokes/jokes.component.html
@@ -2,26 +2,12 @@
   <div class="row">
     <div class="col">
       <h1>Chuck Jokes</h1>
-
-      <ng-container *ngIf="jokes$ | async as jokes">
-        <app-joke-card-list
-          [jokes]="(jokes$ | async) || []"
-          (favorite)="onFavorite($event)"></app-joke-card-list>
-
-        <button
-          *ngIf="jokes.length === 0"
-          class="btn btn-primary"
-          (click)="loadJokes()">
-          Load Jokes
-        </button>
-      </ng-container>
-
-      <div
-        *ngIf="isLoading$ | async"
-        class="spinner-border text-primary"
-        role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
+      <button class="btn btn-primary" (click)="toggleJokesInterval()">
+        {{ intervalRunning ? 'Stop Jokes' : 'Start Jokes' }}
+      </button>
+      <app-joke-card-list
+        [jokes]="(jokes$ | async) || []"
+        (favorite)="onFavorite($event)"></app-joke-card-list>
     </div>
   </div>
 </div>
